--- a/Ciliora-Secunda/gnome-shell/sass/main-modules/_calendar-popup.scss
+++ b/Ciliora-Secunda/gnome-shell/sass/main-modules/_calendar-popup.scss
@@ -331,7 +331,7 @@
 
 .message-list {
     width: 34em;
-    margin: 0 5px 0 15px;
+    margin: 0;
 
     &-placeholder {
         StIcon { @include size(0); }
@@ -345,7 +345,7 @@
 
     &-sections {
         spacing: 1.5em;
-        margin: .6em 0 1em 0;
+        margin: .6em 15px 1em 15px;
     }
 
     &-section,
